# autonomous-analytics-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  REVIEW-BACKLOG.md  pyproject.toml
.github/workflows/: ci.yml
data/sample/: sample_orders.csv
docs/: eval-framework.md
eval/: __init__.py  golden_cases.py  golden_dataset.csv  run_eval.py  scorer.py
examples/: run_retail_analysis.py  sample_questions.md
scripts/: download_financial_data.py  generate_marketing_data.py  generate_saas_data.py  verify_demo_numbers.py
src/analytics_agent/: __init__.py  cli.py  config.py
src/analytics_agent/agents/: __init__.py  base.py  data_profiler.py  orchestrator.py  sql_analyst.py  viz_agent.py
src/analytics_agent/db/: __init__.py  engine.py
src/analytics_agent/models/: __init__.py  chart_spec.py  profile.py  query_plan.py  report.py
src/analytics_agent/pipeline/: __init__.py  context.py  runner.py  validator.py
src/analytics_agent/report/: __init__.py  builder.py
src/analytics_agent/viz/: __init__.py  renderer.py
tests/: conftest.py
tests/test_agents/: test_base.py  test_data_profiler.py  test_orchestrator.py  test_sql_analyst.py  test_viz_agent.py
tests/test_db/: test_engine.py
tests/test_eval/: test_golden_eval.py
tests/test_models/: test_chart_spec.py  test_profile.py  test_query_plan.py  test_report.py
tests/test_pipeline/: test_contract_enforcement.py  test_e2e_stubbed.py  test_handoffs.py  test_runner.py  test_validator.py
tests/test_report/: test_builder.py
(+1 files in other folders)
